Content fix Rounded corners on IE

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,18 +62,24 @@ body {
 #menu li a {
   display:block;
   padding:10px 20px;
-  background:#111;
+  height:21px;
+  background:#000;
   font-size:20px;
   font-weight:400;
-  color:#777;
+  color:#888;
   text-shadow:none;
-  -webkit-border-radius:50px;
-  -moz-border-radius:50px;
+  cursor:pointer;
+  -webkit-border-radius:21px;
+  -moz-border-radius:21px;
 }
 
 #menu li.active a, #menu li a:hover {
   color:#fff;
   text-shadow:none;
+}
+
+#menu li a:active {
+  background:#000;
 }
 
 #menu li.home a {
@@ -82,8 +88,10 @@ body {
   background:url(/images/home_icon.png);
   padding:0;
   margin-top:4px;
+  border:none;
   -webkit-border-radius:0;
   -moz-border-radius:0;
+  -webkit-box-shadow:none;
 }
 
 #menu li.home a span {display:none;}
